samples/_failures_safe/1761365259_489dda_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_732f6eeb.c: In function ‘main’:
./samples/SAFE/__tmp_732f6eeb.c:103:15: error: expected ‘;’ at end of input
  103 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_732f6eeb.c:103:9: error: expected declaration or statement at end of input
  103 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_732f6eeb.c:103:9: error: expected declaration or statement at end of input
